# liquid_engine_gui

./: .gitignore  .gitmodules  DiagramComponents.py  Header.py  PandID.py  README.md  RelaySwitch.py  app_window.py  button_factory.py  buttons.py  callbacks.py  engine_display.py  gauge.py  liquid_engine_state.py  main.py  pyproject.toml  readme.md  requirements.txt  sensor.py  sensor_data_buffer.py  sequence.py  serial_input.py  telemetry.py  valve.py
Extras/Arduino/serialtest/: serialtest.ino
Extras/test/DAQexperimental/: AvTest.py  DataGUI.py  Gauge.py  debug.py
Extras/test/DAQexperimental/data/: injector_test_700psi.txt
SDR_GUI/: .txt  Gauge.py  SDR_LiquidGUI.py  SDR_SolidsGUI.py  gauge.py  main.py  requirements.txt
installers/windows/sdr_win_installer/: __main__.py
liquid_engine_gui/: __main__.py  engine_display.py  gauge.py  sensor.py  sequence.py  valve.py
liquid_engine_gui/plumbing/: ball_valve.py  component_template.py  nozzle.py  orifice.py  pipe.py  pressure_sensor.py  solenoid.py  tank.py  temp_sensor.py
output/: press_data.txt  press_test1.txt  press_test2.txt
plumbing/: ball_valve.py  component_template.py  nozzle.py  orifice.py  pipe.py  pressure_sensor.py  solenoid.py  tank.py  temp_sensor.py
test/DAQexperimental/: DAQexperimental.ino  DataGUI.py  Servo.py  arduinoCom.py  convertDAQ.py  orificeCalData.txt
test/DAQexperimental/VTC/: spice_sim.csv  vtc.py
