[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages]
find = {where=["."], include=["liquid_engine_gui*"], exclude = ["Extras"]}

[tool.setuptools.package-data]
liquid_engine_gui = ["images/*"]

[project]
name = "liquid_engine_gui"
authors = [
    {name = "Nitish Chennoju"},
    {name = "Ian Chandra"},
    {name = "Colton Acosta"},
    {name = "Nick Nguyen"}
]
version = "2024.9.0+packagingdev"
dependencies = [
    "pillow",
    "sdec@git+https://github.com/SunDevilRocketry/sdec@pip-packaging"
]
readme = "readme.md"
